mobile style bug fixes: - existing video . images limited to max-width:100%; - top gap removed for pages with sidebars; - accordion - title scrolls to top of page once it has expanded, prevents tabs vanishing off screen; - quick slide show prev / next iOS button size fixes;

--- a/sites/all/themes/brodies201612/scss/style.scss
+++ b/sites/all/themes/brodies201612/scss/style.scss
@@ -225,9 +225,18 @@ blockquote{
     }
 }
 @media #{$tablet-max}{
-    .sidebar-first,
-    .sidebar-second{
-        margin-top:2em;   
+    .row{
+        .sidebar-first,
+        .sidebar-second{
+            margin-top:2em;   
+        }
+    }
+}
+.main-content{
+    img,
+    iframe{
+        max-width:100%;
+        height:auto !important;
     }
 }
 //////////////////////////////////////////////////////////////////////////////////
@@ -345,7 +354,7 @@ blockquote{
     }
     a{       
         font-weight: 700;
-    }   
+    }
 }
 
 /********************** TAbber ***********************/
@@ -1430,6 +1439,13 @@ body{
 }
 .slick-quote{
     margin-top: 30px;
+
+
+    .slick-next,
+    .slick-prev{
+        width:35px;
+        height:50px;
+    }
     .slick-prev{
         left: -45px;
     }
